adding react activity

--- a/day-34/activity12.html
+++ b/day-34/activity12.html
@@ -14,8 +14,8 @@
     <script type="text/babel">
         function Hello(user) {
             return (<div>
-                       <h2>Hello {user.user.name}</h2>
-                    <h2>Your age is:{user.user.age}</h2>
+                       <h2>Hello {user.user.name}!</h2>
+                    <h2>You are {user.user.age} years old</h2>
                     </div>);
         }
         function App(){
